--- a/.github/workflows/checking.yml
+++ b/.github/workflows/checking.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     paths:
       - 'src/code/**'
-    branches: [ "main" ]
+    branches: [ "master", "main" ]
 
   workflow_dispatch:
 
@@ -41,6 +41,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Prepare environment
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         shell: bash
         run: |
           REPO_NAME=$(gh pr view ${{ github.event.pull_request.number }} --json headRepository --jq '.headRepository.name')
