--- a/.github/workflows/checking.yml
+++ b/.github/workflows/checking.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Get Repository URL
+        run: echo "$GITHUB_REPOSITORY"
+      
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
